--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,8 +50,8 @@ extra:
 extra_css:
   - css/custom.css
 plugins:
-  - tags
   - search
+  - awesome-pages
 markdown_extensions:
   - attr_list
   - pymdownx.emoji:
@@ -66,32 +66,5 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
-nav:
-  - Home: index.md
-  - Ldlib:
-      - ldlib/index.md
-      - ldlib/java_integration.md
-      - Sync Data:
-          - ldlib/SyncData/index.md
-          - ldlib/SyncData/Anotations.md
-          - ldlib/SyncData/type.md
-      - UI:
-          - ldlib/ui/index.md
-          - UI Editor:
-              - ldlib/ui/ui_editor/index.md
-              - ldlib/ui/ui_editor/resource.md
-              - ldlib/ui/ui_editor/group_widget.md
-          - Java / KubeJS:
-              - ldlib/ui/code/index.md
-      - Compass:
-          - ldlib/compass/index.md
-          - ldlib/compass/xml.md
-          - ldlib/compass/scene.md
-  - Multiblocked2:
-      - multiblocked2/index.md
-      - multiblocked2/java_integration.md
-      - KubeJS Integration:
-          - multiblocked2/KubeJS/recipe.md
-          - multiblocked2/KubeJS/event.md
-  - Photon:
-      - photon/index.md
+
+
