--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ theme:
     - navigation.sections
     - navigation.path
     - navigation.tabs
+    - navigation.top
     - content.code.copy
     - content.code.select
     - content.code.annotate
@@ -52,8 +53,14 @@ extra_css:
 plugins:
   - search
   - awesome-pages
+  - glightbox
 markdown_extensions:
   - attr_list
+  - md_in_html
+  - pymdownx.blocks.caption
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
