--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ extra:
     #   lang: zh
 extra_css:
   - css/custom.css
+  - css/java-enhance.css
 plugins:
   - search
   - macros
@@ -78,6 +79,7 @@ markdown_extensions:
       pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
+  - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
 
